# ChangeLog for games-puzzle/freesweep
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/freesweep/ChangeLog,v 1.4 2009/12/24 16:21:23 pacho Exp $

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> freesweep-0.92.ebuild:
  amd64 stable, bug 295709

  19 Dec 2009; Fabian Groffen <grobian@gentoo.org> freesweep-0.92.ebuild:
  Marked ~ppc-macos, bug #296991

  09 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  freesweep-0.92.ebuild:
  stable x86, bug 295709

*freesweep-0.92 (04 Nov 2009)

  04 Nov 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +freesweep-0.92.ebuild, +metadata.xml:
  Initial commit - ebuild submitted by Alexey Charkov via bug #290803
