@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST freesweep-0.92.tar.gz 87353 RMD160 78eff6d0cbf207cf148dc2dd5e070e7e1b27fbaa SHA1 ac5047f6acd7e33b4c2755cb13a6673616641518 SHA256 519c7405c131bd62db7534855fbb92b9cfcf511ded2bf4d2b94f1abaf86aa698
-EBUILD freesweep-0.92.ebuild 600 RMD160 951ef196ebc6e57b90f5618d7d30a357c76267fc SHA1 b0fd80930cc9c25cb83777928e4b9ba1357da617 SHA256 a9306a39f6c5c76b6c0ce5c95db4b0653d9bad27043aaf2b0fe95ce7c2a4b9a5
-MISC ChangeLog 725 RMD160 f843118ee9e234b07b54aa5bc19b321140a838f4 SHA1 b9ce37232288d69dcd9f0d7e3b273ad5ce91b473 SHA256 5cf9b9f0b619091a95600db188ad79fda96f7c1f80ca6806dad311c13a1b140c
+EBUILD freesweep-0.92.ebuild 606 RMD160 149ed691a37a5c21009a5d03fdb99e1ffc008aa9 SHA1 f529e7a37a5b29408374b31e7aec39e67775330b SHA256 e1d7070be4af1b8906326a3707af926080c6c58bea85b1b8a1d49fbc1f31beda
+MISC ChangeLog 829 RMD160 9e56d3cb150957e70ac91e39217d090b4a0b45b5 SHA1 0bb4018ec7e8d8a9f653c8a56a1085b208200628 SHA256 9e6452c4c6768c5ef691f3d4c4710fab49e00a69890f7c18997f5827f408d8ce
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkszlQkACgkQCaWpQKGI+9SVHACfTGk7o8vWjn7KhjKySngAy63U
-TIoAn3ddBmx+R4NB6fD7vjInOxgT+jan
-=WM4V
+iEYEARECAAYFAktCo/QACgkQcsIHjyDViGSWGwCdG7PHeRUeuz/Y9p4gPQCh3Qxd
+rZwAn2+2ImkvCscnbF21Q9f3l15AUrOR
+=ok75
 -----END PGP SIGNATURE-----
