@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/freesweep/freesweep-0.92.ebuild,v 1.4 2009/12/24 16:21:23 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/freesweep/freesweep-0.92.ebuild,v 1.5 2010/01/05 02:30:44 josejx Exp $
 
 inherit games
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.upl.cs.wisc.edu/~hartmann/sweep/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 x86 ~ppc-macos"
+KEYWORDS="amd64 ~ppc x86 ~ppc-macos"
 IUSE=""
 
 DEPEND="sys-libs/ncurses"
