@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/freesweep
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/freesweep/ChangeLog,v 1.4 2009/12/24 16:21:23 pacho Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/freesweep/ChangeLog,v 1.5 2010/01/05 02:30:44 josejx Exp $
+
+  05 Jan 2010; Joseph Jezak <josejx@gentoo.org> freesweep-0.92.ebuild:
+  Marked ~ppc for bug #293682.
 
   24 Dec 2009; Pacho Ramos <pacho@gentoo.org> freesweep-0.92.ebuild:
   amd64 stable, bug 295709
